--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
       <version>0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <!-- GenericEvents -->
+    <dependency>
+      <groupId>com.winthier.generic_events</groupId>
+      <artifactId>generic_events</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- SQL -->
     <dependency>
       <groupId>com.winthier.sql</groupId>
