--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ version: 0.4
 api-version: 1.13
 website: https://cavetale.com
 main: com.winthier.skills.SkillsPlugin
-depend: [ SQL, Exploits, PlayerCache, Custom ]
+depend: [ SQL, Exploits, PlayerCache, Custom, GenericEvents ]
 permissions:
   skills.skill.*:
     description: Use all skills
